samples/_failures_safe/1761595807_026dfe_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_50413039.c: In function ‘main’:
./samples/SAFE/__tmp_50413039.c:128:9: error: expected declaration or statement at end of input
  128 |         fprintf(stderr, "Decompression failed\n");
      |         ^~~~~~~
./samples/SAFE/__tmp_50413039.c:128:9: error: expected declaration or statement at end of input
